--- a/dataingestion/recursiveCharacterTextSplitter.ipynb
+++ b/dataingestion/recursiveCharacterTextSplitter.ipynb
@@ -247,6 +247,16 @@
     "text=text_splitter.create_documents([speech])\n",
     "print(text)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "63b64b81",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain_text_splitters import CharacterTextSplitter\n"
+   ]
   }
  ],
  "metadata": {
