--- a/dataingestion/ollaembeddings.ipynb
+++ b/dataingestion/ollaembeddings.ipynb
@@ -1099,7 +1099,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "myenv",
+   "display_name": "myenv (3.12.4)",
    "language": "python",
    "name": "python3"
   },
