--- a/dataingestion/vectorretriever.ipynb
+++ b/dataingestion/vectorretriever.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 21,
    "id": "8e46f318",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 22,
    "id": "123815ba",
    "metadata": {},
    "outputs": [],
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 23,
    "id": "72c2ce56",
    "metadata": {},
    "outputs": [
@@ -57,7 +57,7 @@
        " Document(metadata={'source': 'mammal-pets-doc'}, page_content='Rabbits are social animals that need plenty of space to hop around.')]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -68,17 +68,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 31,
    "id": "4b4a4c07",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "ChatGroq(profile={}, client=<groq.resources.chat.completions.Completions object at 0x0000023CCF8FA5A0>, async_client=<groq.resources.chat.completions.AsyncCompletions object at 0x0000023CD00883E0>, model_name='Llama3-8b-8192', model_kwargs={}, groq_api_key=SecretStr('**********'))"
+       "ChatGroq(profile={'max_input_tokens': 131072, 'max_output_tokens': 8192, 'image_inputs': False, 'audio_inputs': False, 'video_inputs': False, 'image_outputs': False, 'audio_outputs': False, 'video_outputs': False, 'reasoning_output': False, 'tool_calling': True}, client=<groq.resources.chat.completions.Completions object at 0x0000023D28603740>, async_client=<groq.resources.chat.completions.AsyncCompletions object at 0x0000023D286034D0>, model_name='llama-3.1-8b-instant', model_kwargs={}, groq_api_key=SecretStr('**********'))"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -89,25 +89,16 @@
     "from langchain_groq import ChatGroq\n",
     "load_dotenv()\n",
     "groq_api_key=os.getenv(\"GROQ_API_KEY\")\n",
-    "llm=ChatGroq(api_key=groq_api_key,model=\"Llama3-8b-8192\")\n",
+    "llm=ChatGroq(api_key=groq_api_key,model=\"llama-3.1-8b-instant\")\n",
     "llm"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 25,
    "id": "61c90a87",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\Ayush singh\\AppData\\Local\\Temp\\ipykernel_25676\\410388861.py:2: LangChainDeprecationWarning: The class `OllamaEmbeddings` was deprecated in LangChain 0.3.1 and will be removed in 1.0.0. An updated version of the class exists in the `langchain-ollama package and should be used instead. To use it run `pip install -U `langchain-ollama` and import as `from `langchain_ollama import OllamaEmbeddings``.\n",
-      "  embeddings=OllamaEmbeddings(model=\"gemma:2b\")\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from langchain_community.embeddings import OllamaEmbeddings\n",
     "embeddings=OllamaEmbeddings(model=\"gemma:2b\")"
@@ -115,17 +106,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 26,
    "id": "2fb9ab77",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<langchain_community.vectorstores.faiss.FAISS at 0x23cd0089e20>"
+       "<langchain_community.vectorstores.faiss.FAISS at 0x23d29d87950>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -140,20 +131,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 27,
    "id": "7a7d1bd1",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[Document(id='1386982c-13b7-4b76-bbc7-6daced866a00', metadata={'source': 'mammal-pets-doc'}, page_content='Dogs are greate companions, known for their loyalty and friendliness.'),\n",
-       " Document(id='cb28e87c-1378-4c23-b5bb-34199522cc77', metadata={'source': 'mammal-pets-doc'}, page_content='Cats are independent pets that often enjoy their own space.'),\n",
-       " Document(id='025cd0e8-24a5-4afd-821c-2ea9a34c7062', metadata={'source': 'fish-pets-doc'}, page_content='Goldfish are popular pets for beginners,repairing relatively simple care.'),\n",
-       " Document(id='dd333cd7-b963-429f-87f8-149f5fcc38a8', metadata={'source': 'mammal-pets-doc'}, page_content='Rabbits are social animals that need plenty of space to hop around.')]"
+       "[Document(id='01e19106-aeb8-4745-af99-20038979a2a6', metadata={'source': 'mammal-pets-doc'}, page_content='Dogs are greate companions, known for their loyalty and friendliness.'),\n",
+       " Document(id='7e682603-be91-4f64-9286-5d6c93af91e4', metadata={'source': 'mammal-pets-doc'}, page_content='Cats are independent pets that often enjoy their own space.'),\n",
+       " Document(id='0c6ba551-3d39-4e52-aa5c-884437e488c9', metadata={'source': 'fish-pets-doc'}, page_content='Goldfish are popular pets for beginners,repairing relatively simple care.'),\n",
+       " Document(id='06fbd2da-f2c1-407b-806e-94930a879ed4', metadata={'source': 'mammal-pets-doc'}, page_content='Rabbits are social animals that need plenty of space to hop around.')]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -164,24 +155,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 28,
    "id": "8cb2cf02",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[(Document(id='1386982c-13b7-4b76-bbc7-6daced866a00', metadata={'source': 'mammal-pets-doc'}, page_content='Dogs are greate companions, known for their loyalty and friendliness.'),\n",
+       "[(Document(id='01e19106-aeb8-4745-af99-20038979a2a6', metadata={'source': 'mammal-pets-doc'}, page_content='Dogs are greate companions, known for their loyalty and friendliness.'),\n",
        "  np.float32(4638.9023)),\n",
-       " (Document(id='cb28e87c-1378-4c23-b5bb-34199522cc77', metadata={'source': 'mammal-pets-doc'}, page_content='Cats are independent pets that often enjoy their own space.'),\n",
+       " (Document(id='7e682603-be91-4f64-9286-5d6c93af91e4', metadata={'source': 'mammal-pets-doc'}, page_content='Cats are independent pets that often enjoy their own space.'),\n",
        "  np.float32(4681.8)),\n",
-       " (Document(id='025cd0e8-24a5-4afd-821c-2ea9a34c7062', metadata={'source': 'fish-pets-doc'}, page_content='Goldfish are popular pets for beginners,repairing relatively simple care.'),\n",
+       " (Document(id='0c6ba551-3d39-4e52-aa5c-884437e488c9', metadata={'source': 'fish-pets-doc'}, page_content='Goldfish are popular pets for beginners,repairing relatively simple care.'),\n",
        "  np.float32(4946.6484)),\n",
-       " (Document(id='dd333cd7-b963-429f-87f8-149f5fcc38a8', metadata={'source': 'mammal-pets-doc'}, page_content='Rabbits are social animals that need plenty of space to hop around.'),\n",
+       " (Document(id='06fbd2da-f2c1-407b-806e-94930a879ed4', metadata={'source': 'mammal-pets-doc'}, page_content='Rabbits are social animals that need plenty of space to hop around.'),\n",
        "  np.float32(4958.92))]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -200,18 +191,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 29,
    "id": "82f72997",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[[Document(id='1386982c-13b7-4b76-bbc7-6daced866a00', metadata={'source': 'mammal-pets-doc'}, page_content='Dogs are greate companions, known for their loyalty and friendliness.')],\n",
-       " [Document(id='1386982c-13b7-4b76-bbc7-6daced866a00', metadata={'source': 'mammal-pets-doc'}, page_content='Dogs are greate companions, known for their loyalty and friendliness.')]]"
+       "[[Document(id='01e19106-aeb8-4745-af99-20038979a2a6', metadata={'source': 'mammal-pets-doc'}, page_content='Dogs are greate companions, known for their loyalty and friendliness.')],\n",
+       " [Document(id='01e19106-aeb8-4745-af99-20038979a2a6', metadata={'source': 'mammal-pets-doc'}, page_content='Dogs are greate companions, known for their loyalty and friendliness.')]]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -222,6 +213,37 @@
     "\n",
     "retriever=RunnableLambda(vectorstore.similarity_search).bind(k=1)\n",
     "retriever.batch([\"cat\",\"dog\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "636e9c84",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "content='Dogs are great companions, known for their loyalty and friendliness.' additional_kwargs={} response_metadata={'token_usage': {'completion_tokens': 15, 'prompt_tokens': 108, 'total_tokens': 123, 'completion_time': 0.01844556, 'completion_tokens_details': None, 'prompt_time': 0.008150307, 'prompt_tokens_details': None, 'queue_time': 0.056122283, 'total_time': 0.026595867}, 'model_name': 'llama-3.1-8b-instant', 'system_fingerprint': 'fp_4387d3edbb', 'service_tier': 'on_demand', 'finish_reason': 'stop', 'logprobs': None, 'model_provider': 'groq'} id='lc_run--ef0262dd-e965-4834-b8f3-d7c4405e16d6-0' usage_metadata={'input_tokens': 108, 'output_tokens': 15, 'total_tokens': 123}\n"
+     ]
+    }
+   ],
+   "source": [
+    "##RAG\n",
+    "from langchain_core.prompts import ChatPromptTemplate\n",
+    "from langchain_core.runnables import RunnablePassthrough\n",
+    "message=\"\"\"\n",
+    "Answer this question using the provided context only.\n",
+    "{question}\n",
+    "Context:\n",
+    "{context}\n",
+    "\"\"\"\n",
+    "prompt=ChatPromptTemplate.from_messages([(\"human\",message)])\n",
+    "rag_chain={\"context\":retriever,\"question\":RunnablePassthrough()}|prompt|llm\n",
+    "\n",
+    "response=rag_chain.invoke(\"tell me about dogs\")\n",
+    "print(response)"
    ]
   }
  ],
